test/Fail/WrongBuiltinUnit.err
WrongBuiltinUnit.agda:7.1-26: error: [InvalidBuiltin]
Builtin UNIT must be a singleton record type
when checking the pragma BUILTIN UNIT Bool
